logs/rpclib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/rpclib'...
Listing './lib/python3.5/site-packages/rpclib/auxproc'...
Listing './lib/python3.5/site-packages/rpclib/client'...
Listing './lib/python3.5/site-packages/rpclib/client/twisted'...
Listing './lib/python3.5/site-packages/rpclib/const'...
Listing './lib/python3.5/site-packages/rpclib/interface'...
Listing './lib/python3.5/site-packages/rpclib/interface/wsdl'...
Listing './lib/python3.5/site-packages/rpclib/interface/xml_schema'...
Listing './lib/python3.5/site-packages/rpclib/model'...
Listing './lib/python3.5/site-packages/rpclib/protocol'...
Listing './lib/python3.5/site-packages/rpclib/protocol/csv'...
Listing './lib/python3.5/site-packages/rpclib/protocol/json'...
Listing './lib/python3.5/site-packages/rpclib/protocol/msgpack'...
Listing './lib/python3.5/site-packages/rpclib/protocol/soap'...
Listing './lib/python3.5/site-packages/rpclib/protocol/xml'...
Listing './lib/python3.5/site-packages/rpclib/server'...
Listing './lib/python3.5/site-packages/rpclib/server/django'...
Listing './lib/python3.5/site-packages/rpclib/server/twisted'...
Listing './lib/python3.5/site-packages/rpclib/test'...
Listing './lib/python3.5/site-packages/rpclib/test/interface'...
Listing './lib/python3.5/site-packages/rpclib/test/interop'...
Compiling './lib/python3.5/site-packages/rpclib/test/interop/_test_soap_client_base.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/interop/_test_soap_client_base.py", line 114
    except Fault, e:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpclib/test/interop/server'...
Compiling './lib/python3.5/site-packages/rpclib/test/interop/test_httprpc.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/interop/test_httprpc.py", line 59
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rpclib/test/interop/test_suds.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/interop/test_suds.py", line 82
    except WebFault, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpclib/test/model'...
Listing './lib/python3.5/site-packages/rpclib/test/protocol'...
Compiling './lib/python3.5/site-packages/rpclib/test/protocol/test_html_microformat.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/protocol/test_html_microformat.py", line 135
    print html.tostring(elt, pretty_print=True)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rpclib/test/protocol/test_msgpack.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/protocol/test_msgpack.py", line 88
    print repr(ret)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rpclib/test/test_service.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/test_service.py", line 300
    print etree.tostring(elt, pretty_print=True)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpclib/test/wsdl'...
Compiling './lib/python3.5/site-packages/rpclib/test/wsdl/test_wsdl_ports_services.py'...
***   File "./lib/python3.5/site-packages/rpclib/test/wsdl/test_wsdl_ports_services.py", line 211
    print etree.tostring(wsdl.root_elt, pretty_print=True)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpclib/util'...
Listing './lib/python3.5/site-packages/rpclib/util/oset'...
Listing './lib/python3.5/site-packages/rpclib-2.8.0rc0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spyne'...
Listing './lib/python3.5/site-packages/spyne/auxproc'...
Listing './lib/python3.5/site-packages/spyne/client'...
Listing './lib/python3.5/site-packages/spyne/client/twisted'...
Listing './lib/python3.5/site-packages/spyne/const'...
Listing './lib/python3.5/site-packages/spyne/interface'...
Listing './lib/python3.5/site-packages/spyne/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/interface/xml_schema'...
Listing './lib/python3.5/site-packages/spyne/model'...
Listing './lib/python3.5/site-packages/spyne/model/primitive'...
Listing './lib/python3.5/site-packages/spyne/protocol'...
Listing './lib/python3.5/site-packages/spyne/protocol/cloth'...
Listing './lib/python3.5/site-packages/spyne/protocol/dictdoc'...
Listing './lib/python3.5/site-packages/spyne/protocol/html'...
Listing './lib/python3.5/site-packages/spyne/protocol/soap'...
Listing './lib/python3.5/site-packages/spyne/server'...
Listing './lib/python3.5/site-packages/spyne/server/twisted'...
Listing './lib/python3.5/site-packages/spyne/store'...
Listing './lib/python3.5/site-packages/spyne/store/relational'...
Listing './lib/python3.5/site-packages/spyne/test'...
Listing './lib/python3.5/site-packages/spyne/test/interface'...
Listing './lib/python3.5/site-packages/spyne/test/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/test/interop'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap11'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap12'...
Listing './lib/python3.5/site-packages/spyne/test/model'...
Listing './lib/python3.5/site-packages/spyne/test/multipython'...
Listing './lib/python3.5/site-packages/spyne/test/multipython/model'...
Listing './lib/python3.5/site-packages/spyne/test/protocol'...
Listing './lib/python3.5/site-packages/spyne/test/transport'...
Compiling './lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py'...
***   File "./lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py", line 57
    print repr(val)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spyne/util'...
Listing './lib/python3.5/site-packages/spyne/util/oset'...
Listing './lib/python3.5/site-packages/spyne-2.12.14.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
